Update Model and Remove Global Var (#650)
* Fix wording typo in notebook about user consent flow

cosmetic update

Signed-off-by: Hardik Thakkar <68253981+HardikThakkar94@users.noreply.github.com>

* Add pyyaml to requirements.txt

Signed-off-by: Hardik Thakkar <68253981+HardikThakkar94@users.noreply.github.com>

* Add HardikThakkar94 to CONTRIBUTORS.md

Signed-off-by: Hardik Thakkar <68253981+HardikThakkar94@users.noreply.github.com>

* Updates to fix the Streamlit app access when running in sagemaker

Modified
- Requirements.txt (added dependencies)
- chatbot_app_cognito.py (added get_streamlit_url, for sagemaker access)
- runtime_with_strands_and_egress_3lo.ipynb (streamlit piece for access url, cosmetic updates)

* Fixing Ruff errors reported by python-lint

* removing Ruff errors from python-lint

* passing 3.7 as the model for workshop

* Docs: add prerequisites (OpenAI or Azure OpenAI) cell to Outbound Auth notebook

* Revert "Docs: add prerequisites (OpenAI or Azure OpenAI) cell to Outbound Auth notebook"

This reverts commit 5dded4c38ab700ef3abfe7764a4697215db97171.

* Add prerequisites (OpenAI or Azure OpenAI) cell to Outbound Auth notebook

* cosmetic fix

* Updating OpenAI URL

* Added instructions on the OAuth flow session binding and Streamlit functionality

* All imports are now properly organized at the top of the file, following Python best practices (PEP 8). The linting errors should now be resolved:
  - ✅ runtime.py:18:1: E402 - Fixed
  - ✅ runtime.py:19:1: E402 - Fixed
  - ✅ runtime.py:19:20: F811 - Fixed
  - ✅ runtime.py:25:1: E402 - Fixed

* formatting fixed

* Update Identity Outbound tutorial notebooks with corrections and improvements:
1. 05-Outbound_Auth_3lo notebook: Fixed credential provider name typo
2. 06-Outbound_Auth_Github notebook: Multiple improvements including:
    - Updated description text for GitHub-specific use case
    - Reorganized imports (moved to top of cell)
    - Added boto session and region setup
    - Reordered OAut

--- a/01-tutorials/03-AgentCore-identity/05-Outbound_Auth_3lo/runtime_with_strands_and_egress_3lo.ipynb
+++ b/01-tutorials/03-AgentCore-identity/05-Outbound_Auth_3lo/runtime_with_strands_and_egress_3lo.ipynb
@@ -342,16 +342,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f58cdc6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "provider_name = \"google-cal-provider\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "ff317407",
    "metadata": {},
    "outputs": [],
@@ -362,7 +352,7 @@
     "\n",
     "# Configure Google OAuth2 provider - On-Behalf-Of User\n",
     "google_provider = identity_client.create_oauth2_credential_provider({\n",
-    "    \"name\": provider_name,\n",
+    "    \"name\": \"google-cal-provider\",\n",
     "    \"credentialProviderVendor\": \"GoogleOauth2\",\n",
     "    \"oauth2ProviderConfigInput\": {\n",
     "        \"googleOauth2ProviderConfig\": {\n",
@@ -510,7 +500,7 @@
     "\n",
     "# Initialize the agent with tools and your preferred model choice\n",
     "agent = Agent(\n",
-    "    model=\"us.anthropic.claude-3-7-sonnet-20250219-v1:0\",\n",
+    "    model=\"global.anthropic.claude-haiku-4-5-20251001-v1:0\",\n",
     "    tools=[get_calendar_events_today]\n",
     ")\n",
     "\n",
@@ -608,7 +598,7 @@
     "\n",
     "\n",
     "@requires_access_token(\n",
-    "    provider_name={provider_name},\n",
+    "    provider_name=\"google-cal-provider\",\n",
     "    scopes=SCOPES,\n",
     "    auth_flow='USER_FEDERATION',\n",
     "    on_auth_url=on_auth_url,\n",
