--- a/01-tutorials/03-AgentCore-identity/06-Outbound_Auth_Github/runtime_with_strands_and_egress_github_3lo.ipynb
+++ b/01-tutorials/03-AgentCore-identity/06-Outbound_Auth_Github/runtime_with_strands_and_egress_github_3lo.ipynb
@@ -369,22 +369,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "provider_name = \"github-provider\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from bedrock_agentcore.services.identity import IdentityClient\n",
     "region = boto_session.region_name\n",
     "identity_client = IdentityClient(region)\n",
     "\n",
     "# Configure GitHub OAuth2 provider - On-Behalf-Of User\n",
     "github_provider = identity_client.create_oauth2_credential_provider({\n",
-    "    \"name\": provider_name,\n",
+    "    \"name\": \"github-provider\",\n",
     "    \"credentialProviderVendor\": \"GithubOauth2\",\n",
     "    \"oauth2ProviderConfigInput\": {\n",
     "        \"githubOauth2ProviderConfig\": {\n",
@@ -616,7 +607,7 @@
     "\n",
     "\n",
     "@requires_access_token(\n",
-    "    provider_name=\"{provider_name}\",\n",
+    "    provider_name=\"github-provider\",\n",
     "    scopes=[\"repo\", \"read:user\"],\n",
     "    auth_flow='USER_FEDERATION',\n",
     "    on_auth_url=on_auth_url,\n",
@@ -632,7 +623,7 @@
     "\n",
     "# Create agent instance\n",
     "agent = Agent(\n",
-    "    model=\"us.anthropic.claude-3-7-sonnet-20250219-v1:0\",\n",
+    "    model=\"global.anthropic.claude-haiku-4-5-20251001-v1:0\",\n",
     "    tools=[inspect_github_repos],\n",
     "    system_prompt=\"\"\"You are a GitHub assistant. Use the inspect_github_repos tool to fetch private repositories data.\n",
     "    The inspect_github_repos tool handles token exchange and proper authentication with the GitHub API \n",
